--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -3,10 +3,10 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN go build -o order-service
+RUN go build -o analytics-service
 
 FROM alpine:latest
 WORKDIR /root/
-COPY --from=builder /app/order-service .
+COPY --from=builder /app/analytics-service .
 EXPOSE 8080
 ENTRYPOINT ["./order-service"]
