--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     restart: always
     environment:
       POSTGRES_USER: notification_user
-      POSTGRES_PASSWORD: notification_pass
+      POSTGRES_PASSWORD: notification_password
       POSTGRES_DB: notification_db
     ports:
       - "5437:5432"
@@ -102,6 +102,24 @@ services:
       timeout: 5s
       retries: 5
 
+  delivery-db:
+    image: postgres:13
+    restart: always
+    environment:
+      POSTGRES_USER: delivery_user
+      POSTGRES_PASSWORD: delivery_pass
+      POSTGRES_DB: delivery_db
+    ports:
+      - "5438:5432"
+    volumes:
+      - delivery_db_data:/var/lib/postgresql/data
+      - ./delivery-service/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U delivery_user -d delivery_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   auth-service:
     build: ./auth-service
     ports:
@@ -113,6 +131,18 @@ services:
       - DB_USER=auth_user
       - DB_PASSWORD=auth_password
       - DB_NAME=auth_db
+
+  delivery-service:
+    build: ./delivery-service
+    ports:
+      - "8086:8080"
+    environment:
+      - BASE_FEE=350
+      - DISTANCE_RATE=10
+      - WEIGHT_RATE=20
+      - VOLUME_RATE=30
+      - URGENCY_FACTOR=1.2
+      - CURRENCY=RUB
 
   order-service:
     build: ./order-service
@@ -163,6 +193,11 @@ services:
       - DB_PASSWORD=notification_pass
       - DB_NAME=notification_db
       - RABBITMQ_URL=amqp://user:password@rabbitmq:5672/
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
   frontend:
     build: ./frontend
     ports:
@@ -186,10 +221,11 @@ services:
     ports:
       - "5050:80"
     restart: always
-    
+
 volumes:
   auth_db_data:
   order_db_data:
   tracking_db_data:
   analytics_db_data:
   notification_db_data:
+  delivery_db_data:
