new tables + pdf

--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -20,6 +20,8 @@ WORKDIR /root/
 
 COPY --from=builder /app/order-service .
 
+COPY --from=builder /app/assets ./assets
+
 EXPOSE 8080
 
 ENTRYPOINT ["./order-service"]
